--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "description": "",
     "main": "index.html",
     "scripts": {
+        "format": "prettier",
         "init-project": "npm install && npm-run-all init:*",
         "init:dirs": "mkdirp dist src/sass src/css src/vendor src/images src/js",
         "init:files": "touch README.md src/index.html src/sass/style.scss src/js/script.js",
@@ -40,6 +41,7 @@
         "npm-run-all": "^4.1.5",
         "nu-html-checker": "^0.1.0",
         "onchange": "^5.2.0",
+        "prettier": "1.18.2",
         "stylelint": "^9.10.1",
         "stylelint-scss": "^3.5.4"
     }
